created by zippydoc task

--- a/common-snippets/JP/DownloadSettings.json
+++ b/common-snippets/JP/DownloadSettings.json
@@ -15,13 +15,13 @@
     "fields": {
       "output.options.location": {
         "type": "text",
-        "label": "場所の指定",
+        "label": "指定位置",
         "val": "A1",
         "breakLine": true
       },
       "output.options.formatted_as_table": {
         "type": "checkbox",
-        "label": "テーブルとしてフォーマット済み",
+        "label": "格式化为表格",
         "val": "true",
         "isOn": "true",
         "isOff": "false",
@@ -29,14 +29,14 @@
       },
       "output.add_tag": {
         "type": "checkbox",
-        "label": "タグの追加",
+        "label": "添加标记",
         "val": "false",
         "isOn": "true",
         "isOff": "false"
       },
       "output.tag_name": {
         "type": "text",
-        "label": "タグ名",
+        "label": "标记名称",
         "show_if": "output.add_tag=='true'",
         "required": true,
         "minLength": 1,
@@ -47,28 +47,28 @@
       },
       "output.options.visibility": {
         "type": "select",
-        "label": "可視性",
+        "label": "可见性",
         "val": "current_flow",
         "options": {
           "current_flow": {
-            "label": "現在のフロー"
+            "label": "当前工作流"
           },
           "all_flow": {
-            "label": "全てのフロー"
+            "label": "所有工作流"
           }
         },
         "breakLine": true
       },
       "output.options.table_mode": {
         "type": "select",
-        "label": "貼り付け",
+        "label": "粘贴",
         "val": "content_only",
         "options": {
           "content_only": {
-            "label": "コンテンツのみ"
+            "label": "仅内容"
           },
           "fully_formatted": {
-            "label": "完全フォーマット済み"
+            "label": "完全格式化"
           }
         }
       }
