created by zippydoc task

--- a/common-snippets/JP/IfTableExistWithoutAppendNotExisting.json
+++ b/common-snippets/JP/IfTableExistWithoutAppendNotExisting.json
@@ -5,13 +5,13 @@
     "val": "drop_if_exist",
     "options": {
       "drop_if_exist": {
-        "label": "作成またはドロップ（既存の場合）"
+        "label": "创建或删除（如存在）"
       },
       "error_if_exist": {
-        "label": "新規作成（既存の場合はエラーにする）"
+        "label": "新建（如存在则抛出错误）"
       },
       "error_if_not_exist": {
-        "label": "ドロップ（存在しない場合はエラーにする）"
+        "label": "删除（如不存在则抛出错误）"
       },
       "append_all": {
         "label": "Append All"
