--- a/PT/AppendInput.json
+++ b/PT/AppendInput.json
@@ -41,7 +41,7 @@
       "options.input_table_rows_limit": {
         "type": "text",
         "label": "Input table limit(max: 800)",
-        "show_if": "options.cut_off_run==''true''",
+        "show_if": "options.cut_off_run=='true'",
         "minLength": 1,
         "maxLength": 3,
         "val": "500",
