created by zippydoc task

--- a/common-snippets/ES/DownloadSettings.json
+++ b/common-snippets/ES/DownloadSettings.json
@@ -29,7 +29,7 @@
       },
       "output.add_tag": {
         "type": "checkbox",
-        "label": “Agregar Marcador”,
+        "label": "Agregar Marcador",
         "val": "false",
         "isOn": "true",
         "isOff": "false"
