add Add changes output option

--- a/common-snippets/IfTableExistWithoutAppendNotExisting.json
+++ b/common-snippets/IfTableExistWithoutAppendNotExisting.json
@@ -15,7 +15,39 @@
       },
       "append_all": {
         "label": "Append All"
+      },
+      "append_changes": {
+        "label": "Append changes"
       }
     }
+  },
+  "output.if_table_exist.append_changes__add_timestamp": {
+    "type": "checkbox",
+    "label": "Add Timestamp",
+    "show_if": "output.if_table_exist.type=='append_changes'",
+    "val": "false",
+    "isOn": "true",
+    "isOff": "false"
+  },
+  "output.if_table_exist.append_changes__timestamp_colname": {
+    "type": "text",
+    "label": "Timestamp column name",
+    "val": "Timestamp",
+    "required": true
+  },
+  "output.if_table_exist.append_changes__add_row": {
+    "type": "checkbox",
+    "label": "Add Row",
+    "show_if": "output.if_table_exist.type=='append_changes'",
+    "val": "false",
+    "isOn": "true",
+    "isOff": "false"
+  },
+  "output.if_table_exist.append_changes__row_colname": {
+    "type": "text",
+    "label": "Row column name",
+    "val": "Row",
+    "required": true,
+    "breakLine": true
   }
 }
