fix IfTableExist option

--- a/common-snippets/IfTableExistWithoutAppendNotExisting.json
+++ b/common-snippets/IfTableExistWithoutAppendNotExisting.json
@@ -32,6 +32,7 @@
   "output.if_table_exist.append_changes__timestamp_colname": {
     "type": "text",
     "label": "Timestamp column name",
+    "show_if": "output.if_table_exist.type=='append_changes' && output.if_table_exist.append_changes__add_timestamp=='true'",
     "val": "Timestamp",
     "required": true
   },
@@ -46,6 +47,7 @@
   "output.if_table_exist.append_changes__row_colname": {
     "type": "text",
     "label": "Row column name",
+    "show_if": "output.if_table_exist.type=='append_changes' && output.if_table_exist.append_changes__add_row=='true'",
     "val": "Row",
     "required": true,
     "breakLine": true
