make tickbox left-aligned

--- a/common-snippets/IfTableExistWithoutAppendNotExisting.json
+++ b/common-snippets/IfTableExistWithoutAppendNotExisting.json
@@ -19,7 +19,8 @@
       "append_changes": {
         "label": "Append changes"
       }
-    }
+    },
+    "breakLine": true
   },
   "output.if_table_exist.append_changes__add_timestamp": {
     "type": "checkbox",
@@ -34,7 +35,8 @@
     "label": "Timestamp column name",
     "show_if": "output.if_table_exist.type=='append_changes' && output.if_table_exist.append_changes__add_timestamp=='true'",
     "val": "Timestamp",
-    "required": true
+    "required": true,
+    "breakLine": true
   },
   "output.if_table_exist.append_changes__add_row": {
     "type": "checkbox",
