--- a/common-snippets/PT/DownloadSettings.json
+++ b/common-snippets/PT/DownloadSettings.json
@@ -1,7 +1,7 @@
 {
   "output.download_setting": {
     "type": "checkbox",
-    "label": "Download Settings",
+    "etiqueta": "Configurações de descarga",
     "val": "false",
     "isOn": "true",
     "isOff": "false",
@@ -9,19 +9,19 @@
   },
   "download_setting_frame": {
     "type": "fieldset",
-    "label": "Download Settings",
+    "etiqueta": "Configurações de descarga",
     "show_if": "output.download_setting=='true'",
     "repeat": false,
     "fields": {
       "output.options.location": {
         "type": "text",
-        "label": "Especificar Localização",
+        "etiqueta": "Especificar Localização",
         "val": "A1",
         "breakLine": true
       },
       "output.options.formatted_as_table": {
         "type": "checkbox",
-        "label": "Formatado como Tabela",
+        "etiqueta": "Formatado como Tabela",
         "val": "true",
         "isOn": "true",
         "isOff": "false",
@@ -29,14 +29,14 @@
       },
       "output.add_tag": {
         "type": "checkbox",
-        "label": "Adicionar Marcador",
+        "etiqueta": "Adicionar Marcador",
         "val": "false",
         "isOn": "true",
         "isOff": "false"
       },
       "output.tag_name": {
         "type": "text",
-        "label": "Nome do Rótulo",
+        "etiqueta": "Nome do Rótulo",
         "show_if": "output.add_tag=='true'",
         "required": true,
         "minLength": 1,
@@ -47,28 +47,28 @@
       },
       "output.options.visibility": {
         "type": "select",
-        "label": "Visibilidade",
+        "etiqueta": "Visibilidade",
         "val": "current_flow",
         "options": {
           "current_flow": {
-            "label": "Fluxo Atual"
+            "etiqueta": "Fluxo Atual"
           },
           "all_flow": {
-            "label": "Todos os Fluxos"
+            "etiqueta": "Todos os Fluxos"
           }
         },
         "breakLine": true
       },
       "output.options.table_mode": {
         "type": "select",
-        "label": "Colar",
+        "etiqueta": "Colar",
         "val": "content_only",
         "options": {
           "content_only": {
-            "label": "Apenas Conteúdo"
+            "etiqueta": "Apenas Conteúdo"
           },
           "fully_formatted": {
-            "label": "Totalmente Formatado"
+            "etiqueta": "Totalmente Formatado"
           }
         }
       }
