--- a/common-snippets/FR/DownloadSettings.json
+++ b/common-snippets/FR/DownloadSettings.json
@@ -1,7 +1,7 @@
 {
   "output.download_setting": {
     "type": "checkbox",
-    "label": "Download Settings",
+    "Étiquette": "Paramètres de téléchargement",
     "val": "false",
     "isOn": "true",
     "isOff": "false",
@@ -9,19 +9,19 @@
   },
   "download_setting_frame": {
     "type": "fieldset",
-    "label": "Download Settings",
+    "Étiquette": "Paramètres de téléchargement",
     "show_if": "output.download_setting=='true'",
     "repeat": false,
     "fields": {
       "output.options.location": {
         "type": "text",
-        "label": "Indiquer le lieu",
+        "Étiquette": "Indiquer le lieu",
         "val": "A1",
         "breakLine": true
       },
       "output.options.formatted_as_table": {
         "type": "checkbox",
-        "label": "Formaté comme tableau",
+        "Étiquette": "Formaté comme tableau",
         "val": "true",
         "isOn": "true",
         "isOff": "false",
@@ -29,14 +29,14 @@
       },
       "output.add_tag": {
         "type": "checkbox",
-        "label": "Ajouter une étiquette",
+        "Étiquette": "Ajouter une étiquette",
         "val": "false",
         "isOn": "true",
         "isOff": "false"
       },
       "output.tag_name": {
         "type": "text",
-        "label": "Nom de l'étiquette",
+        "Étiquette": "Nom de l'étiquette",
         "show_if": "output.add_tag=='true'",
         "required": true,
         "minLength": 1,
@@ -47,28 +47,28 @@
       },
       "output.options.visibility": {
         "type": "select",
-        "label": "Visibilité",
+        "Étiquette": "Visibilité",
         "val": "current_flow",
         "options": {
           "current_flow": {
-            "label": "Flux actuel"
+            "Étiquette": "Flux actuel"
           },
           "all_flow": {
-            "label": "Tous les flux"
+            "Étiquette": "Tous les flux"
           }
         },
         "breakLine": true
       },
       "output.options.table_mode": {
         "type": "select",
-        "label": "Coller",
+        "Étiquette": "Coller",
         "val": "content_only",
         "options": {
           "content_only": {
-            "label": "Contenu uniquement"
+            "Étiquette": "Contenu uniquement"
           },
           "fully_formatted": {
-            "label": "Entièrement formaté"
+            "Étiquette": "Entièrement formaté"
           }
         }
       }
