--- a/common-snippets/ES/DownloadSettings.json
+++ b/common-snippets/ES/DownloadSettings.json
@@ -1,7 +1,7 @@
 {
   "output.download_setting": {
     "type": "checkbox",
-    "label": "Download Settings",
+    "Etiqueta": "Descargar configuración",
     "val": "false",
     "isOn": "true",
     "isOff": "false",
@@ -9,19 +9,19 @@
   },
   "download_setting_frame": {
     "type": "fieldset",
-    "label": "Download Settings",
+    "Etiqueta": "Descargar configuración",
     "show_if": "output.download_setting=='true'",
     "repeat": false,
     "fields": {
       "output.options.location": {
         "type": "text",
-        "label": "Especificar Ubicación",
+        "Etiqueta": "Especificar Ubicación",
         "val": "A1",
         "breakLine": true
       },
       "output.options.formatted_as_table": {
         "type": "checkbox",
-        "label": "Formateado como Tabla",
+        "Etiqueta": "Formateado como Tabla",
         "val": "true",
         "isOn": "true",
         "isOff": "false",
@@ -29,14 +29,14 @@
       },
       "output.add_tag": {
         "type": "checkbox",
-        "label": "Agregar Marcador",
+        "Etiqueta": "Agregar Marcador",
         "val": "false",
         "isOn": "true",
         "isOff": "false"
       },
       "output.tag_name": {
         "type": "text",
-        "label": "Nombre del marcador",
+        "Etiqueta": "Nombre del marcador",
         "show_if": "output.add_tag=='true'",
         "required": true,
         "minLength": 1,
@@ -47,28 +47,28 @@
       },
       "output.options.visibility": {
         "type": "select",
-        "label": "Visibilidad",
+        "Etiqueta": "Visibilidad",
         "val": "current_flow",
         "options": {
           "current_flow": {
-            "label": "Caudal Actual"
+            "Etiqueta": "Caudal Actual"
           },
           "all_flow": {
-            "label": "Todos los Caudales"
+            "Etiqueta": "Todos los Caudales"
           }
         },
         "breakLine": true
       },
       "output.options.table_mode": {
         "type": "select",
-        "label": "Pegar",
+        "Etiqueta": "Pegar",
         "val": "content_only",
         "options": {
           "content_only": {
-            "label": "Sólo Contenido"
+            "Etiqueta": "Sólo Contenido"
           },
           "fully_formatted": {
-            "label": "Completamente Formateada"
+            "Etiqueta": "Completamente Formateada"
           }
         }
       }
