--- a/common-snippets/RU/DownloadSettings.json
+++ b/common-snippets/RU/DownloadSettings.json
@@ -1,7 +1,7 @@
 {
   "output.download_setting": {
     "type": "checkbox",
-    "Метка": "Настройки загрузки",
+    "ラベル": "ダウンロード設定",
     "val": "false",
     "isOn": "true",
     "isOff": "false",
@@ -9,19 +9,19 @@
   },
   "download_setting_frame": {
     "type": "fieldset",
-    "Метка": "Настройки загрузки",
+    "ラベル": "ダウンロード設定",
     "show_if": "output.download_setting=='true'",
     "repeat": false,
     "fields": {
       "output.options.location": {
         "type": "text",
-        "Метка": "Указать местоположение",
+        "ラベル": "場所の指定",
         "val": "A1",
         "breakLine": true
       },
       "output.options.formatted_as_table": {
         "type": "checkbox",
-        "Метка": "Отформатировано как таблица",
+        "ラベル": "テーブルとしてフォーマット済み",
         "val": "true",
         "isOn": "true",
         "isOff": "false",
@@ -29,14 +29,14 @@
       },
       "output.add_tag": {
         "type": "checkbox",
-        "Метка": "Добавить тэг",
+        "ラベル": "タグの追加",
         "val": "false",
         "isOn": "true",
         "isOff": "false"
       },
       "output.tag_name": {
         "type": "text",
-        "Метка": "Название тэга",
+        "ラベル": "タグ名",
         "show_if": "output.add_tag=='true'",
         "required": true,
         "minLength": 1,
@@ -47,28 +47,28 @@
       },
       "output.options.visibility": {
         "type": "select",
-        "Метка": "Видимость",
+        "ラベル": "可視性",
         "val": "current_flow",
         "options": {
           "current_flow": {
-            "Метка": "Текущий процесс"
+            "ラベル": "現在のフロー"
           },
           "all_flow": {
-            "Метка": "Все процессы"
+            "ラベル": "全てのフロー"
           }
         },
         "breakLine": true
       },
       "output.options.table_mode": {
         "type": "select",
-        "Метка": "Вставить",
+        "ラベル": "貼り付け",
         "val": "content_only",
         "options": {
           "content_only": {
-            "Метка": "Только содержание"
+            "ラベル": "コンテンツのみ"
           },
           "fully_formatted": {
-            "Метка": "Полностью отформатированно"
+            "ラベル": "完全フォーマット済み"
           }
         }
       }
