created by zippydoc task

--- a/common-snippets/JP/DownloadSettings.json
+++ b/common-snippets/JP/DownloadSettings.json
@@ -1,7 +1,7 @@
 {
   "output.download_setting": {
     "type": "checkbox",
-    "label": "Download Settings",
+    "ラベル": "ダウンロード設定",
     "val": "false",
     "isOn": "true",
     "isOff": "false",
@@ -9,19 +9,19 @@
   },
   "download_setting_frame": {
     "type": "fieldset",
-    "label": "Download Settings",
+    "ラベル": "ダウンロード設定",
     "show_if": "output.download_setting=='true'",
     "repeat": false,
     "fields": {
       "output.options.location": {
         "type": "text",
-        "label": "指定位置",
+        "ラベル": "場所の指定",
         "val": "A1",
         "breakLine": true
       },
       "output.options.formatted_as_table": {
         "type": "checkbox",
-        "label": "格式化为表格",
+        "ラベル": "テーブルとしてフォーマット済み",
         "val": "true",
         "isOn": "true",
         "isOff": "false",
@@ -29,14 +29,14 @@
       },
       "output.add_tag": {
         "type": "checkbox",
-        "label": "添加标记",
+        "ラベル": "タグの追加",
         "val": "false",
         "isOn": "true",
         "isOff": "false"
       },
       "output.tag_name": {
         "type": "text",
-        "label": "标记名称",
+        "ラベル": "タグ名",
         "show_if": "output.add_tag=='true'",
         "required": true,
         "minLength": 1,
@@ -47,28 +47,28 @@
       },
       "output.options.visibility": {
         "type": "select",
-        "label": "可见性",
+        "ラベル": "可視性",
         "val": "current_flow",
         "options": {
           "current_flow": {
-            "label": "当前工作流"
+            "ラベル": "現在のフロー"
           },
           "all_flow": {
-            "label": "所有工作流"
+            "ラベル": "全てのフロー"
           }
         },
         "breakLine": true
       },
       "output.options.table_mode": {
         "type": "select",
-        "label": "粘贴",
+        "ラベル": "貼り付け",
         "val": "content_only",
         "options": {
           "content_only": {
-            "label": "仅内容"
+            "ラベル": "コンテンツのみ"
           },
           "fully_formatted": {
-            "label": "完全格式化"
+            "ラベル": "完全フォーマット済み"
           }
         }
       }
