--- a/common-snippets/JP/IfTableExistWithoutAppendNotExisting.json
+++ b/common-snippets/JP/IfTableExistWithoutAppendNotExisting.json
@@ -1,21 +1,57 @@
 {
   "output.if_table_exist.type": {
     "type": "select",
-    "label": "If existing",
+    "ラベル": "既存の場合,
     "val": "drop_if_exist",
     "options": {
       "drop_if_exist": {
-        "label": "创建或删除（如存在）"
+        "ラベル": "作成またはドロップ（既存の場合）"
       },
       "error_if_exist": {
-        "label": "新建（如存在则抛出错误）"
+        "ラベル": "新規作成（既存の場合はエラーにする）"
       },
       "error_if_not_exist": {
-        "label": "删除（如不存在则抛出错误）"
+        "ラベル": "ドロップ（存在しない場合はエラーにする）"
       },
       "append_all": {
-        "label": "Append All"
+        "ラベル": "Append All"
+      },
+      "append_changes": {
+        "ラベル": "変更の追加
       }
-    }
+    },
+    "breakLine": true
+  },
+  "output.if_table_exist.append_changes__add_timestamp": {
+    "type": "checkbox",
+    "ラベル": "Add Timestamp",
+    "show_if": "output.if_table_exist.type=='append_changes'",
+    "val": "false",
+    "isOn": "true",
+    "isOff": "false"
+  },
+  "output.if_table_exist.append_changes__timestamp_colname": {
+    "type": "text",
+    "ラベル": "タイムスタンプの列名,
+    "show_if": "output.if_table_exist.type=='append_changes' && output.if_table_exist.append_changes__add_timestamp=='true'",
+    "val": "Timestamp",
+    "required": true,
+    "breakLine": true
+  },
+  "output.if_table_exist.append_changes__add_row": {
+    "type": "checkbox",
+    "ラベル": "行の追加",
+    "show_if": "output.if_table_exist.type=='append_changes'",
+    "val": "false",
+    "isOn": "true",
+    "isOff": "false"
+  },
+  "output.if_table_exist.append_changes__row_colname": {
+    "type": "text",
+    "ラベル": "行のカラム名,
+    "show_if": "output.if_table_exist.type=='append_changes' && output.if_table_exist.append_changes__add_row=='true'",
+    "val": "Row",
+    "required": true,
+    "breakLine": true
   }
 }
