--- a/common-snippets/RU/IfTableExistWithoutAppendNotExisting.json
+++ b/common-snippets/RU/IfTableExistWithoutAppendNotExisting.json
@@ -1,30 +1,30 @@
 {
   "output.if_table_exist.type": {
     "type": "select",
-    "ラベル": "既存の場合,
+    "Метка": "Если существует",
     "val": "drop_if_exist",
     "options": {
       "drop_if_exist": {
-        "ラベル": "作成またはドロップ（既存の場合）"
+        "Метка": "Создать или сбросить (если уже существует)"
       },
       "error_if_exist": {
-        "ラベル": "新規作成（既存の場合はエラーにする）"
+        "Метка": "Создать новое (убрать ошибку, если есть)"
       },
       "error_if_not_exist": {
-        "ラベル": "ドロップ（存在しない場合はエラーにする）"
+        "Метка": "Отменить (убрать ошибку, если ее нет)"
       },
       "append_all": {
-        "ラベル": "Append All"
+        "Метка": "Добавить все"
       },
       "append_changes": {
-        "ラベル": "変更の追加
+        "Метка": "Применить изменения"
       }
     },
     "breakLine": true
   },
   "output.if_table_exist.append_changes__add_timestamp": {
     "type": "checkbox",
-    "ラベル": "Add Timestamp",
+    "Метка": "Добавить метку времени",
     "show_if": "output.if_table_exist.type=='append_changes'",
     "val": "false",
     "isOn": "true",
@@ -32,7 +32,7 @@
   },
   "output.if_table_exist.append_changes__timestamp_colname": {
     "type": "text",
-    "ラベル": "タイムスタンプの列名,
+    "Метка": "Имя столбца временной метки",
     "show_if": "output.if_table_exist.type=='append_changes' && output.if_table_exist.append_changes__add_timestamp=='true'",
     "val": "Timestamp",
     "required": true,
@@ -40,7 +40,7 @@
   },
   "output.if_table_exist.append_changes__add_row": {
     "type": "checkbox",
-    "ラベル": "行の追加",
+    "Метка": "Добавить Ряд",
     "show_if": "output.if_table_exist.type=='append_changes'",
     "val": "false",
     "isOn": "true",
@@ -48,7 +48,7 @@
   },
   "output.if_table_exist.append_changes__row_colname": {
     "type": "text",
-    "ラベル": "行のカラム名,
+    "Метка": "Имя столбца строки",
     "show_if": "output.if_table_exist.type=='append_changes' && output.if_table_exist.append_changes__add_row=='true'",
     "val": "Row",
     "required": true,
