created by zippydoc task

--- a/DE/AppendInput.json
+++ b/DE/AppendInput.json
@@ -1,12 +1,12 @@
 {
   "input": {
     "type": "fieldset",
-    "label": "Eingangstabelle auswählen",
+    "Beschriftung": "Eingangstabelle auswählen",
     "repeat": false,
     "fields": {
       "target_table.table": {
         "type": "select",
-        "label": "Linke Tabelle",
+        "Beschriftung": "Linke Tabelle",
         "bind": "TABLES"
       },
       "target_table.remove_input_table_after_processing": {
@@ -19,7 +19,7 @@
       },
       "source_table.table": {
         "type": "select",
-        "label": "Rechter Tisch",
+        "Beschriftung": "Rechter Tisch",
         "bind": "TABLES",
         "breakLine": true
       },
@@ -33,14 +33,14 @@
       },
       "options.cut_off_run": {
         "type": "checkbox",
-        "label": "Cut off Input table and Run",
+        "Beschriftung": "Eingabetabelle abschneiden und ausführen",
         "val": "false",
         "isOn": "true",
         "isOff": "false"
       },
       "options.input_table_rows_limit": {
         "type": "text",
-        "label": "Input table limit(max: 800)",
+        "Beschriftung": "Eingabetabelle begrenzen (max: 800)",
         "show_if": "options.cut_off_run=='true'",
         "minLength": 1,
         "maxLength": 3,
