created by zippydoc task

--- a/PT/AppendInput.json
+++ b/PT/AppendInput.json
@@ -1,12 +1,12 @@
 {
   "input": {
     "type": "fieldset",
-    "label": "Selecionar Tabela de Entrada",
+    "etiqueta": "Selecionar Tabela de Entrada",
     "repeat": false,
     "fields": {
       "target_table.table": {
         "type": "select",
-        "label": "Tabela da Esquerda",
+        "etiqueta": "Tabela da Esquerda",
         "bind": "TABLES"
       },
       "target_table.remove_input_table_after_processing": {
@@ -19,7 +19,7 @@
       },
       "source_table.table": {
         "type": "select",
-        "label": "Tabela da Direita",
+        "etiqueta": "Tabela da Direita",
         "bind": "TABLES",
         "breakLine": true
       },
@@ -33,14 +33,14 @@
       },
       "options.cut_off_run": {
         "type": "checkbox",
-        "label": "Cut off Input table and Run",
+        "etiqueta": "Cortar a tabela de entrada e correr",
         "val": "false",
         "isOn": "true",
         "isOff": "false"
       },
       "options.input_table_rows_limit": {
         "type": "text",
-        "label": "Input table limit(max: 800)",
+        "etiqueta": "Limite da tabela de entrada(máx: 800)",
         "show_if": "options.cut_off_run=='true'",
         "minLength": 1,
         "maxLength": 3,
