--- a/FR/AppendInput.json
+++ b/FR/AppendInput.json
@@ -1,12 +1,12 @@
 {
   "input": {
     "type": "fieldset",
-    "label": "Sélectionner un tableau d'entrée",
+    "Étiquette": "Sélectionner un tableau d'entrée",
     "repeat": false,
     "fields": {
       "target_table.table": {
         "type": "select",
-        "label": "Tableau de gauche",
+        "Étiquette": "Tableau de gauche",
         "bind": "TABLES"
       },
       "target_table.remove_input_table_after_processing": {
@@ -19,7 +19,7 @@
       },
       "source_table.table": {
         "type": "select",
-        "label": "Table de droite",
+        "Étiquette": "Table de droite",
         "bind": "TABLES",
         "breakLine": true
       },
@@ -33,14 +33,14 @@
       },
       "options.cut_off_run": {
         "type": "checkbox",
-        "label": "Cut off Input table and Run",
+        "Étiquette": "Couper la table d'entrée et courir",
         "val": "false",
         "isOn": "true",
         "isOff": "false"
       },
       "options.input_table_rows_limit": {
         "type": "text",
-        "label": "Input table limit(max: 800)",
+        "Étiquette": "Limite du tableau d'entrée (max : 800)",
         "show_if": "options.cut_off_run=='true'",
         "minLength": 1,
         "maxLength": 3,
