--- a/ES/AppendInput.json
+++ b/ES/AppendInput.json
@@ -1,12 +1,12 @@
 {
   "input": {
     "type": "fieldset",
-    "label": "Seleccionar Tabla de Entrada",
+    "Etiqueta": "Seleccionar Tabla de Entrada",
     "repeat": false,
     "fields": {
       "target_table.table": {
         "type": "select",
-        "label": "Tabla Izquierda",
+        "Etiqueta": "Tabla Izquierda",
         "bind": "TABLES"
       },
       "target_table.remove_input_table_after_processing": {
@@ -19,7 +19,7 @@
       },
       "source_table.table": {
         "type": "select",
-        "label": "Tabla Derecha",
+        "Etiqueta": "Tabla Derecha",
         "bind": "TABLES",
         "breakLine": true
       },
@@ -33,14 +33,14 @@
       },
       "options.cut_off_run": {
         "type": "checkbox",
-        "label": "Cut off Input table and Run",
+        "Etiqueta": "Cortar tabla de entrada y ejecutar",
         "val": "false",
         "isOn": "true",
         "isOff": "false"
       },
       "options.input_table_rows_limit": {
         "type": "text",
-        "label": "Input table limit(max: 800)",
+        "Etiqueta": "Límite de la tabla de entrada (máximo: 800)",
         "show_if": "options.cut_off_run=='true'",
         "minLength": 1,
         "maxLength": 3,
