[clean_tk] update

--- a/AutoCleanOutputConfig.json
+++ b/AutoCleanOutputConfig.json
@@ -4,6 +4,7 @@
     "label": "Autorun",
     "val": "false",
     "isOn": "true",
-    "isOff": "false"
+    "isOff": "false",
+    "breakLine": true
   }
 }
