created by zippydoc task

--- a/common-snippets/DE/DownloadSettings.json
+++ b/common-snippets/DE/DownloadSettings.json
@@ -1,78 +1,53 @@
 {
-  "output.download_setting": {
-    "type": "checkbox",
-    "label": "Download Settings",
-    "val": "false",
-    "isOn": "true",
-    "isOff": "false",
-    "style": "margin-top: 10px"
-  },
   "download_setting_frame": {
     "type": "fieldset",
-    "label": "Download Settings",
-    "show_if": "output.download_setting=='true'",
+    "Beschriftung": "Einstellungen herunterladen",
+    "show_if": "output.custom_options=='true'",
     "repeat": false,
     "fields": {
       "output.options.location": {
         "type": "text",
-        "label": "Standort angeben",
+        "Beschriftung": "Standort angeben",
         "val": "A1",
         "breakLine": true
       },
       "output.options.formatted_as_table": {
         "type": "checkbox",
-        "label": "Als Tabelle formatiert",
+        "Beschriftung": "Als Tabelle formatiert",
         "val": "true",
         "isOn": "true",
         "isOff": "false",
         "breakLine": true
       },
-      "output.add_tag": {
-        "type": "checkbox",
-        "label": "Tag hinzufügen",
-        "val": "false",
-        "isOn": "true",
-        "isOff": "false"
-      },
-      "output.tag_name": {
-        "type": "text",
-        "label": "Tag Name",
-        "show_if": "output.add_tag=='true'",
-        "required": true,
-        "minLength": 1,
-        "maxLength": 255,
-        "val": "",
-        "breakLine": true,
-        "style": "margin-left: 15px"
-      },
       "output.options.visibility": {
         "type": "select",
-        "label": "Sichtbarkeit",
+        "Beschriftung": "Sichtbarkeit",
         "val": "current_flow",
         "options": {
           "current_flow": {
-            "label": "Stromfluss"
+            "Beschriftung": "Stromfluss"
           },
           "all_flow": {
-            "label": "Alle Flows"
+            "Beschriftung": "Alle Flows"
           }
         },
         "breakLine": true
       },
       "output.options.table_mode": {
         "type": "select",
-        "label": "Einfügen",
+        "Beschriftung": "Einfügen",
         "val": "content_only",
         "options": {
           "content_only": {
-            "label": "Nur Inhalt"
+            "Beschriftung": "Nur Inhalt"
           },
           "fully_formatted": {
-            "label": "Vollständig formatiert"
+            "Beschriftung": "Vollständig formatiert"
           }
         }
       }
     },
-    "breakLine": true
+    "breakLine": true,
+    "style": "margin-bottom: 20px"
   }
 }
