created by zippydoc task

--- a/common-snippets/FR/DownloadSettings.json
+++ b/common-snippets/FR/DownloadSettings.json
@@ -1,16 +1,8 @@
 {
-  "output.download_setting": {
-    "type": "checkbox",
-    "Étiquette": "Paramètres de téléchargement",
-    "val": "false",
-    "isOn": "true",
-    "isOff": "false",
-    "style": "margin-top: 10px"
-  },
   "download_setting_frame": {
     "type": "fieldset",
     "Étiquette": "Paramètres de téléchargement",
-    "show_if": "output.download_setting=='true'",
+    "show_if": "output.custom_options=='true'",
     "repeat": false,
     "fields": {
       "output.options.location": {
@@ -26,24 +18,6 @@
         "isOn": "true",
         "isOff": "false",
         "breakLine": true
-      },
-      "output.add_tag": {
-        "type": "checkbox",
-        "Étiquette": "Ajouter une étiquette",
-        "val": "false",
-        "isOn": "true",
-        "isOff": "false"
-      },
-      "output.tag_name": {
-        "type": "text",
-        "Étiquette": "Nom de l'étiquette",
-        "show_if": "output.add_tag=='true'",
-        "required": true,
-        "minLength": 1,
-        "maxLength": 255,
-        "val": "",
-        "breakLine": true,
-        "style": "margin-left: 15px"
       },
       "output.options.visibility": {
         "type": "select",
@@ -73,6 +47,7 @@
         }
       }
     },
-    "breakLine": true
+    "breakLine": true,
+    "style": "margin-bottom: 20px"
   }
 }
