created by zippydoc task

--- a/common-snippets/ES/IfTableExistWithoutAppendNotExisting.json
+++ b/common-snippets/ES/IfTableExistWithoutAppendNotExisting.json
@@ -2,6 +2,7 @@
   "output.if_table_exist.type": {
     "type": "select",
     "Etiqueta": "Si existe",
+    "show_if": "output.custom_options=='true'",
     "val": "drop_if_exist",
     "options": {
       "drop_if_exist": {
