--- a/common-snippets/RU/IfTableExistWithoutAppendNotExisting.json
+++ b/common-snippets/RU/IfTableExistWithoutAppendNotExisting.json
@@ -2,6 +2,7 @@
   "output.if_table_exist.type": {
     "type": "select",
     "Метка": "Если существует",
+    "show_if": "output.custom_options=='true'",
     "val": "drop_if_exist",
     "options": {
       "drop_if_exist": {
