--- a/common-snippets/CN/IfTableExistWithoutAppendNotExisting.json
+++ b/common-snippets/CN/IfTableExistWithoutAppendNotExisting.json
@@ -2,6 +2,7 @@
   "output.if_table_exist.type": {
     "type": "select",
     "标签": "如果现有",
+    "show_if": "output.custom_options=='true'",
     "val": "drop_if_exist",
     "options": {
       "drop_if_exist": {
