created by zippydoc task

--- a/RU/AppendInput.json
+++ b/RU/AppendInput.json
@@ -1,12 +1,12 @@
 {
   "input": {
     "type": "fieldset",
-    "label": "Выбрать входную таблицу",
+    "Метка": "Выбрать входную таблицу",
     "repeat": false,
     "fields": {
       "target_table.table": {
         "type": "select",
-        "label": "Левая таблица",
+        "Метка": "Левая таблица",
         "bind": "TABLES"
       },
       "target_table.remove_input_table_after_processing": {
@@ -19,7 +19,7 @@
       },
       "source_table.table": {
         "type": "select",
-        "label": "Правая таблица",
+        "Метка": "Правая таблица",
         "bind": "TABLES",
         "breakLine": true
       },
@@ -33,14 +33,14 @@
       },
       "options.cut_off_run": {
         "type": "checkbox",
-        "label": "Cut off Input table and Run",
+        "Метка": "Отсечь таблицу ввода и запустить",
         "val": "false",
         "isOn": "true",
         "isOff": "false"
       },
       "options.input_table_rows_limit": {
         "type": "text",
-        "label": "Input table limit(max: 800)",
+        "Метка": "Ограничение входной таблицы (максимум: 800)",
         "show_if": "options.cut_off_run=='true'",
         "minLength": 1,
         "maxLength": 3,
