created by zippydoc task

--- a/JP/AppendInput.json
+++ b/JP/AppendInput.json
@@ -1,12 +1,12 @@
 {
   "input": {
     "type": "fieldset",
-    "label": "入力テーブルの選択",
+    "ラベル": "入力テーブルの選択",
     "repeat": false,
     "fields": {
       "target_table.table": {
         "type": "select",
-        "label": "左テーブル",
+        "ラベル": "左テーブル",
         "bind": "TABLES"
       },
       "target_table.remove_input_table_after_processing": {
@@ -19,7 +19,7 @@
       },
       "source_table.table": {
         "type": "select",
-        "label": "右テーブル",
+        "ラベル": "右テーブル",
         "bind": "TABLES",
         "breakLine": true
       },
@@ -33,14 +33,14 @@
       },
       "options.cut_off_run": {
         "type": "checkbox",
-        "label": "Cut off Input table and Run",
+        "ラベル": "入力テーブルを切り離して実行",
         "val": "false",
         "isOn": "true",
         "isOff": "false"
       },
       "options.input_table_rows_limit": {
         "type": "text",
-        "label": "Input table limit(max: 800)",
+        "ラベル": "入力テーブルの制限(最大:800)",
         "show_if": "options.cut_off_run=='true'",
         "minLength": 1,
         "maxLength": 3,
