--- a/CN/AppendInput.json
+++ b/CN/AppendInput.json
@@ -1,12 +1,12 @@
 {
   "input": {
     "type": "fieldset",
-    "label": "选择输入表格",
+    "标签": "选择输入表格",
     "repeat": false,
     "fields": {
       "target_table.table": {
         "type": "select",
-        "label": "左表格",
+        "标签": "左表格",
         "bind": "TABLES"
       },
       "target_table.remove_input_table_after_processing": {
@@ -19,7 +19,7 @@
       },
       "source_table.table": {
         "type": "select",
-        "label": "右表格",
+        "标签": "右表格",
         "bind": "TABLES",
         "breakLine": true
       },
@@ -33,14 +33,14 @@
       },
       "options.cut_off_run": {
         "type": "checkbox",
-        "label": "Cut off Input table and Run",
+        "标签": "切断输入表并运行",
         "val": "false",
         "isOn": "true",
         "isOff": "false"
       },
       "options.input_table_rows_limit": {
         "type": "text",
-        "label": "Input table limit(max: 800)",
+        "标签": "输入表限制（最大：800）",
         "show_if": "options.cut_off_run=='true'",
         "minLength": 1,
         "maxLength": 3,
