--- a/common-snippets/DE/DownloadSettings.json
+++ b/common-snippets/DE/DownloadSettings.json
@@ -1,19 +1,19 @@
 {
   "download_setting_frame": {
     "type": "fieldset",
-    "Beschriftung": "Einstellungen herunterladen",
+    "label": "Einstellungen herunterladen",
     "show_if": "output.custom_options=='true'",
     "repeat": false,
     "fields": {
       "output.options.location": {
         "type": "text",
-        "Beschriftung": "Standort angeben",
+        "label": "Standort angeben",
         "val": "A1",
         "breakLine": true
       },
       "output.options.formatted_as_table": {
         "type": "checkbox",
-        "Beschriftung": "Als Tabelle formatiert",
+        "label": "Als Tabelle formatiert",
         "val": "true",
         "isOn": "true",
         "isOff": "false",
@@ -21,28 +21,28 @@
       },
       "output.options.visibility": {
         "type": "select",
-        "Beschriftung": "Sichtbarkeit",
+        "label": "Sichtbarkeit",
         "val": "current_flow",
         "options": {
           "current_flow": {
-            "Beschriftung": "Stromfluss"
+            "label": "Stromfluss"
           },
           "all_flow": {
-            "Beschriftung": "Alle Flows"
+            "label": "Alle Flows"
           }
         },
         "breakLine": true
       },
       "output.options.table_mode": {
         "type": "select",
-        "Beschriftung": "Einfügen",
+        "label": "Einfügen",
         "val": "content_only",
         "options": {
           "content_only": {
-            "Beschriftung": "Nur Inhalt"
+            "label": "Nur Inhalt"
           },
           "fully_formatted": {
-            "Beschriftung": "Vollständig formatiert"
+            "label": "Vollständig formatiert"
           }
         }
       }
