--- a/common-snippets/DE/IfTableExistWithoutAppendNotExisting.json
+++ b/common-snippets/DE/IfTableExistWithoutAppendNotExisting.json
@@ -1,31 +1,31 @@
 {
   "output.if_table_exist.type": {
     "type": "select",
-    "Beschriftung": "Wenn vorhanden",
+    "label": "Wenn vorhanden",
     "show_if": "output.custom_options=='true'",
     "val": "drop_if_exist",
     "options": {
       "drop_if_exist": {
-        "Beschriftung": "Erstellen oder Verwerfen (falls bereits vorhanden)"
+        "label": "Erstellen oder Verwerfen (falls bereits vorhanden)"
       },
       "error_if_exist": {
-        "Beschriftung": "Neu erstellen (wirft Fehler, wenn vorhanden)"
+        "label": "Neu erstellen (wirft Fehler, wenn vorhanden)"
       },
       "error_if_not_exist": {
-        "Beschriftung": "Ablegen (Fehler werfen, wenn nicht vorhanden)"
+        "label": "Ablegen (Fehler werfen, wenn nicht vorhanden)"
       },
       "append_all": {
-        "Beschriftung": "Alles anhängen"
+        "label": "Alles anhängen"
       },
       "append_changes": {
-        "Beschriftung": "Änderungen anhängen"
+        "label": "Änderungen anhängen"
       }
     },
     "breakLine": true
   },
   "output.if_table_exist.append_changes__add_timestamp": {
     "type": "checkbox",
-    "Beschriftung": "Zeitstempel hinzufügen",
+    "label": "Zeitstempel hinzufügen",
     "show_if": "output.if_table_exist.type=='append_changes'",
     "val": "false",
     "isOn": "true",
@@ -33,7 +33,7 @@
   },
   "output.if_table_exist.append_changes__timestamp_colname": {
     "type": "text",
-    "Beschriftung": "Zeitstempel-Spaltenname",
+    "label": "Zeitstempel-Spaltenname",
     "show_if": "output.if_table_exist.type=='append_changes' && output.if_table_exist.append_changes__add_timestamp=='true'",
     "val": "Timestamp",
     "required": true,
@@ -41,7 +41,7 @@
   },
   "output.if_table_exist.append_changes__add_row": {
     "type": "checkbox",
-    "Beschriftung": "Neue Reihe",
+    "label": "Neue Reihe",
     "show_if": "output.if_table_exist.type=='append_changes'",
     "val": "false",
     "isOn": "true",
@@ -49,7 +49,7 @@
   },
   "output.if_table_exist.append_changes__row_colname": {
     "type": "text",
-    "Beschriftung": "Zeilenspaltenname",
+    "label": "Zeilenspaltenname",
     "show_if": "output.if_table_exist.type=='append_changes' && output.if_table_exist.append_changes__add_row=='true'",
     "val": "Row",
     "required": true,
