--- a/common-snippets/PT/DownloadSettings.json
+++ b/common-snippets/PT/DownloadSettings.json
@@ -1,19 +1,19 @@
 {
   "download_setting_frame": {
     "type": "fieldset",
-    "etiqueta": "Configurações de descarga",
+    "label": "Configurações de descarga",
     "show_if": "output.custom_options=='true'",
     "repeat": false,
     "fields": {
       "output.options.location": {
         "type": "text",
-        "etiqueta": "Especificar Localização",
+        "label": "Especificar Localização",
         "val": "A1",
         "breakLine": true
       },
       "output.options.formatted_as_table": {
         "type": "checkbox",
-        "etiqueta": "Formatado como Tabela",
+        "label": "Formatado como Tabela",
         "val": "true",
         "isOn": "true",
         "isOff": "false",
@@ -21,28 +21,28 @@
       },
       "output.options.visibility": {
         "type": "select",
-        "etiqueta": "Visibilidade",
+        "label": "Visibilidade",
         "val": "current_flow",
         "options": {
           "current_flow": {
-            "etiqueta": "Fluxo Atual"
+            "label": "Fluxo Atual"
           },
           "all_flow": {
-            "etiqueta": "Todos os Fluxos"
+            "label": "Todos os Fluxos"
           }
         },
         "breakLine": true
       },
       "output.options.table_mode": {
         "type": "select",
-        "etiqueta": "Colar",
+        "label": "Colar",
         "val": "content_only",
         "options": {
           "content_only": {
-            "etiqueta": "Apenas Conteúdo"
+            "label": "Apenas Conteúdo"
           },
           "fully_formatted": {
-            "etiqueta": "Totalmente Formatado"
+            "label": "Totalmente Formatado"
           }
         }
       }
