created by zippydoc task

--- a/common-snippets/PT/IfTableExistWithoutAppendNotExisting.json
+++ b/common-snippets/PT/IfTableExistWithoutAppendNotExisting.json
@@ -1,31 +1,31 @@
 {
   "output.if_table_exist.type": {
     "type": "select",
-    "etiqueta": "Se existir",
+    "label": "Se existir",
     "show_if": "output.custom_options=='true'",
     "val": "drop_if_exist",
     "options": {
       "drop_if_exist": {
-        "etiqueta": "Criar ou Descartar (se já existir)"
+        "label": "Criar ou Descartar (se já existir)"
       },
       "error_if_exist": {
-        "etiqueta": "Criar Novo (gera erro se existir)"
+        "label": "Criar Novo (gera erro se existir)"
       },
       "error_if_not_exist": {
-        "etiqueta": "Descartar (gera erro se não existir)"
+        "label": "Descartar (gera erro se não existir)"
       },
       "append_all": {
-        "etiqueta": "Acrescentar tudo"
+        "label": "Acrescentar tudo"
       },
       "append_changes": {
-        "etiqueta": "Anexar alterações"
+        "label": "Anexar alterações"
       }
     },
     "breakLine": true
   },
   "output.if_table_exist.append_changes__add_timestamp": {
     "type": "checkbox",
-    "etiqueta": "Adicionar carimbo temporal",
+    "label": "Adicionar carimbo temporal",
     "show_if": "output.if_table_exist.type=='append_changes'",
     "val": "false",
     "isOn": "true",
@@ -33,7 +33,7 @@
   },
   "output.if_table_exist.append_changes__timestamp_colname": {
     "type": "text",
-    "etiqueta": "Nome da coluna do timestamp",
+    "label": "Nome da coluna do timestamp",
     "show_if": "output.if_table_exist.type=='append_changes' && output.if_table_exist.append_changes__add_timestamp=='true'",
     "val": "Timestamp",
     "required": true,
@@ -41,7 +41,7 @@
   },
   "output.if_table_exist.append_changes__add_row": {
     "type": "checkbox",
-    "etiqueta": "Adicionar Linha",
+    "label": "Adicionar Linha",
     "show_if": "output.if_table_exist.type=='append_changes'",
     "val": "false",
     "isOn": "true",
@@ -49,7 +49,7 @@
   },
   "output.if_table_exist.append_changes__row_colname": {
     "type": "text",
-    "etiqueta": "Nome da coluna da fila",
+    "label": "Nome da coluna da fila",
     "show_if": "output.if_table_exist.type=='append_changes' && output.if_table_exist.append_changes__add_row=='true'",
     "val": "Row",
     "required": true,
