created by zippydoc task

--- a/common-snippets/PT/OutputConfig.json
+++ b/common-snippets/PT/OutputConfig.json
@@ -1,20 +1,20 @@
 {
   "output_config_frame": {
     "type": "fieldset",
-    "etiqueta": "Output Configuration",
+    "label": "Output Configuration",
     "show_if": "output.custom_options=='true'",
     "repeat": false,
     "fields": {
       "output.add_tag": {
         "type": "checkbox",
-        "etiqueta": "Adicionar Marcador",
+        "label": "Adicionar Marcador",
         "val": "false",
         "isOn": "true",
         "isOff": "false"
       },
       "output.tag_name": {
         "type": "text",
-        "etiqueta": "Nome do Rótulo",
+        "label": "Nome do Rótulo",
         "show_if": "output.add_tag=='true'",
         "required": true,
         "minLength": 1,
