--- a/common-snippets/FR/DownloadSettings.json
+++ b/common-snippets/FR/DownloadSettings.json
@@ -1,19 +1,19 @@
 {
   "download_setting_frame": {
     "type": "fieldset",
-    "Étiquette": "Paramètres de téléchargement",
+    "label": "Paramètres de téléchargement",
     "show_if": "output.custom_options=='true'",
     "repeat": false,
     "fields": {
       "output.options.location": {
         "type": "text",
-        "Étiquette": "Indiquer le lieu",
+        "label": "Indiquer le lieu",
         "val": "A1",
         "breakLine": true
       },
       "output.options.formatted_as_table": {
         "type": "checkbox",
-        "Étiquette": "Formaté comme tableau",
+        "label": "Formaté comme tableau",
         "val": "true",
         "isOn": "true",
         "isOff": "false",
@@ -21,28 +21,28 @@
       },
       "output.options.visibility": {
         "type": "select",
-        "Étiquette": "Visibilité",
+        "label": "Visibilité",
         "val": "current_flow",
         "options": {
           "current_flow": {
-            "Étiquette": "Flux actuel"
+            "label": "Flux actuel"
           },
           "all_flow": {
-            "Étiquette": "Tous les flux"
+            "label": "Tous les flux"
           }
         },
         "breakLine": true
       },
       "output.options.table_mode": {
         "type": "select",
-        "Étiquette": "Coller",
+        "label": "Coller",
         "val": "content_only",
         "options": {
           "content_only": {
-            "Étiquette": "Contenu uniquement"
+            "label": "Contenu uniquement"
           },
           "fully_formatted": {
-            "Étiquette": "Entièrement formaté"
+            "label": "Entièrement formaté"
           }
         }
       }
