created by zippydoc task

--- a/common-snippets/FR/IfTableExistWithoutAppendNotExisting.json
+++ b/common-snippets/FR/IfTableExistWithoutAppendNotExisting.json
@@ -1,31 +1,31 @@
 {
   "output.if_table_exist.type": {
     "type": "select",
-    "Étiquette": "Si existant",
+    "label": "Si existant",
     "show_if": "output.custom_options=='true'",
     "val": "drop_if_exist",
     "options": {
       "drop_if_exist": {
-        "Étiquette": "Créer ou supprimer (si déjà existant)"
+        "label": "Créer ou supprimer (si déjà existant)"
       },
       "error_if_exist": {
-        "Étiquette": "Créer (erreur si déjà existant)"
+        "label": "Créer (erreur si déjà existant)"
       },
       "error_if_not_exist": {
-        "Étiquette": "Ignorer (erreur si non-existant)"
+        "label": "Ignorer (erreur si non-existant)"
       },
       "append_all": {
-        "Étiquette": "Ajouter tout"
+        "label": "Ajouter tout"
       },
       "append_changes": {
-        "Étiquette": "Ajouter les modifications
+        "label": "Ajouter les modifications
       }
     },
     "breakLine": true
   },
   "output.if_table_exist.append_changes__add_timestamp": {
     "type": "checkbox",
-    "Étiquette": "Ajouter l'horodatage",
+    "label": "Ajouter l'horodatage",
     "show_if": "output.if_table_exist.type=='append_changes'",
     "val": "false",
     "isOn": "true",
@@ -33,7 +33,7 @@
   },
   "output.if_table_exist.append_changes__timestamp_colname": {
     "type": "text",
-    "Étiquette": "Nom de la colonne d'horodatage",
+    "label": "Nom de la colonne d'horodatage",
     "show_if": "output.if_table_exist.type=='append_changes' && output.if_table_exist.append_changes__add_timestamp=='true'",
     "val": "Timestamp",
     "required": true,
@@ -41,7 +41,7 @@
   },
   "output.if_table_exist.append_changes__add_row": {
     "type": "checkbox",
-    "Étiquette": "Ajouter une ligne",
+    "label": "Ajouter une ligne",
     "show_if": "output.if_table_exist.type=='append_changes'",
     "val": "false",
     "isOn": "true",
@@ -49,7 +49,7 @@
   },
   "output.if_table_exist.append_changes__row_colname": {
     "type": "text",
-    "Étiquette": "Nom de la colonne de la ligne,
+    "label": "Nom de la colonne de la ligne,
     "show_if": "output.if_table_exist.type=='append_changes' && output.if_table_exist.append_changes__add_row=='true'",
     "val": "Row",
     "required": true,
