--- a/common-snippets/ES/DownloadSettings.json
+++ b/common-snippets/ES/DownloadSettings.json
@@ -1,19 +1,19 @@
 {
   "download_setting_frame": {
     "type": "fieldset",
-    "Etiqueta": "Descargar configuración",
+    "label": "Descargar configuración",
     "show_if": "output.custom_options=='true'",
     "repeat": false,
     "fields": {
       "output.options.location": {
         "type": "text",
-        "Etiqueta": "Especificar Ubicación",
+        "label": "Especificar Ubicación",
         "val": "A1",
         "breakLine": true
       },
       "output.options.formatted_as_table": {
         "type": "checkbox",
-        "Etiqueta": "Formateado como Tabla",
+        "label": "Formateado como Tabla",
         "val": "true",
         "isOn": "true",
         "isOff": "false",
@@ -21,28 +21,28 @@
       },
       "output.options.visibility": {
         "type": "select",
-        "Etiqueta": "Visibilidad",
+        "label": "Visibilidad",
         "val": "current_flow",
         "options": {
           "current_flow": {
-            "Etiqueta": "Caudal Actual"
+            "label": "Caudal Actual"
           },
           "all_flow": {
-            "Etiqueta": "Todos los Caudales"
+            "label": "Todos los Caudales"
           }
         },
         "breakLine": true
       },
       "output.options.table_mode": {
         "type": "select",
-        "Etiqueta": "Pegar",
+        "label": "Pegar",
         "val": "content_only",
         "options": {
           "content_only": {
-            "Etiqueta": "Sólo Contenido"
+            "label": "Sólo Contenido"
           },
           "fully_formatted": {
-            "Etiqueta": "Completamente Formateada"
+            "label": "Completamente Formateada"
           }
         }
       }
