created by zippydoc task

--- a/common-snippets/RU/IfTableExistWithoutAppendNotExisting.json
+++ b/common-snippets/RU/IfTableExistWithoutAppendNotExisting.json
@@ -1,31 +1,31 @@
 {
   "output.if_table_exist.type": {
     "type": "select",
-    "Метка": "Если существует",
+    "label": "Если существует",
     "show_if": "output.custom_options=='true'",
     "val": "drop_if_exist",
     "options": {
       "drop_if_exist": {
-        "Метка": "Создать или сбросить (если уже существует)"
+        "label": "Создать или сбросить (если уже существует)"
       },
       "error_if_exist": {
-        "Метка": "Создать новое (убрать ошибку, если есть)"
+        "label": "Создать новое (убрать ошибку, если есть)"
       },
       "error_if_not_exist": {
-        "Метка": "Отменить (убрать ошибку, если ее нет)"
+        "label": "Отменить (убрать ошибку, если ее нет)"
       },
       "append_all": {
-        "Метка": "Добавить все"
+        "label": "Добавить все"
       },
       "append_changes": {
-        "Метка": "Применить изменения"
+        "label": "Применить изменения"
       }
     },
     "breakLine": true
   },
   "output.if_table_exist.append_changes__add_timestamp": {
     "type": "checkbox",
-    "Метка": "Добавить метку времени",
+    "label": "Добавить метку времени",
     "show_if": "output.if_table_exist.type=='append_changes'",
     "val": "false",
     "isOn": "true",
@@ -33,7 +33,7 @@
   },
   "output.if_table_exist.append_changes__timestamp_colname": {
     "type": "text",
-    "Метка": "Имя столбца временной метки",
+    "label": "Имя столбца временной метки",
     "show_if": "output.if_table_exist.type=='append_changes' && output.if_table_exist.append_changes__add_timestamp=='true'",
     "val": "Timestamp",
     "required": true,
@@ -41,7 +41,7 @@
   },
   "output.if_table_exist.append_changes__add_row": {
     "type": "checkbox",
-    "Метка": "Добавить Ряд",
+    "label": "Добавить Ряд",
     "show_if": "output.if_table_exist.type=='append_changes'",
     "val": "false",
     "isOn": "true",
@@ -49,7 +49,7 @@
   },
   "output.if_table_exist.append_changes__row_colname": {
     "type": "text",
-    "Метка": "Имя столбца строки",
+    "label": "Имя столбца строки",
     "show_if": "output.if_table_exist.type=='append_changes' && output.if_table_exist.append_changes__add_row=='true'",
     "val": "Row",
     "required": true,
