created by zippydoc task

--- a/common-snippets/JP/DownloadSettings.json
+++ b/common-snippets/JP/DownloadSettings.json
@@ -1,19 +1,19 @@
 {
   "download_setting_frame": {
     "type": "fieldset",
-    "ラベル": "ダウンロード設定",
+    "label": "ダウンロード設定",
     "show_if": "output.custom_options=='true'",
     "repeat": false,
     "fields": {
       "output.options.location": {
         "type": "text",
-        "ラベル": "場所の指定",
+        "label": "場所の指定",
         "val": "A1",
         "breakLine": true
       },
       "output.options.formatted_as_table": {
         "type": "checkbox",
-        "ラベル": "テーブルとしてフォーマット済み",
+        "label": "テーブルとしてフォーマット済み",
         "val": "true",
         "isOn": "true",
         "isOff": "false",
@@ -21,28 +21,28 @@
       },
       "output.options.visibility": {
         "type": "select",
-        "ラベル": "可視性",
+        "label": "可視性",
         "val": "current_flow",
         "options": {
           "current_flow": {
-            "ラベル": "現在のフロー"
+            "label": "現在のフロー"
           },
           "all_flow": {
-            "ラベル": "全てのフロー"
+            "label": "全てのフロー"
           }
         },
         "breakLine": true
       },
       "output.options.table_mode": {
         "type": "select",
-        "ラベル": "貼り付け",
+        "label": "貼り付け",
         "val": "content_only",
         "options": {
           "content_only": {
-            "ラベル": "コンテンツのみ"
+            "label": "コンテンツのみ"
           },
           "fully_formatted": {
-            "ラベル": "完全フォーマット済み"
+            "label": "完全フォーマット済み"
           }
         }
       }
